# bindle

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bindle/: core.py
src/packager/: __init__.py  core.py
tests/: Dockerfile.test  conftest.py  test_blacklist.py  test_integration.py  testapp.c
