[project]
name = "bindle"
version = "0.1.0"
description = "Bundle ELF executables and their dynamic library dependencies into portable directories"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Matteo Bernabito", email = "matteo@bernabito.it" },
]
license = "0BSD"
keywords = ["elf", "bindle", "ldd", "rpath", "portable", "distribution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD Zero Clause License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

[project.scripts]
bindle = "bindle.core:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
